--- a/practice/style.css
+++ b/practice/style.css
@@ -51,7 +51,7 @@ body > div {
     margin-left: 16px;
 }
 
-.btn-success {
+.btn--success {
     background-color: #71be34;;
 }
 
@@ -59,7 +59,7 @@ body > div {
     background-color: #ffb702;
 }
 
-.bth--danger {
+.btn--danger {
     background-color: #ff623d;
 }
 
@@ -70,32 +70,75 @@ body > div {
 
 /* ======= Toast massage ======== */
 
+
+#toast {
+    position: fixed;
+    top: 32px;
+    right: 32px;
+    z-index: 99999;
+}
+
 .toast {
     display: flex;
     align-items: center;
     background-color: #fff;
     border-radius: 2px;
     padding: 20px 0;
+    min-width: 400px;
+    max-width: 450px;
     border-left: 4px solid;
     box-shadow: 0 5px 8px rgba(0, 0, 0 0.08);
+    transition: all linear 0.3s;
 } 
 
-.toast--success {
+@keyframes slideInLeft {
+    from {
+        opacity: 0;
+        transform: translateX(calc(100% + 32px));
+    }
+    to {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
 
+@keyframes fadeOut {
+    to {
+        opacity: 0;
+    }
+}
+
+.toast--success {
+    border-color:#47d964 ;
+}
+
+.toast--success .toast__icon {
+    color: #47d964;
 }
 
 .toast--info {
+    border-color: #2186eb;
+}
 
+.toast--info .toast__icon {
+    color: #2186eb;
 }
 
 .toast--warning {
+    border-color: #ffc021;
+}
 
+.toast--warning .toast__icon {
+    color: #ffc021;
 }
 
 .toast--error {
-
+    border-color: #ff623d;
 }
 
+.toast--error .toast__icon {
+    color: #ff623d;
+}
 
 .toast + .toast {
     margin-top: 20px;
@@ -111,7 +154,7 @@ body > div {
 }
 
 .toast__body {
-
+    flex-grow: 1;
 }
 
 .toast__title {
@@ -123,7 +166,8 @@ body > div {
 .toast__msg {
     font-size: 14px;
     color: #888;
-    margin-top: 4px
+    margin-top: 6px;
+    line-height: 1.5;
 }
 
 .toast__close {
